<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:textSize="34sp"
            app:title="Title"
            app:expandedTitleMarginBottom="94dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?colorPrimary">

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/movie1"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@color/transparent"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/bg_rounded_form"
                />

            <net.colindodd.toggleimagebutton.ToggleImageButton
                android:id="@+id/to_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:layout_gravity="end"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="30dp"
                app:tib_drawable_off="@drawable/ic_favorite_border_24"
                app:tib_drawable_on="@drawable/ic_favorite_24" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_detail_poster"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="150dp"
                android:layout_marginStart="28dp"
                android:src="@android:color/transparent"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_backdrop"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="24dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview"
                        tools:srcCompat="@drawable/movie1"
                        android:contentDescription="@string/image_backdrop" />

                    <TextView
                        android:id="@+id/tv_detail_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/release_date"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_detail_overview_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:minHeight="32dp"
                        android:text="@string/overview"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date" />

                    <TextView
                        android:id="@+id/tv_detail_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/overview_detail"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
