<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context="com.aldi.movienjam.ui.main.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/container_main_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/transparent"
            app:cardCornerRadius="6dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_dark"
                app:iss_auto_cycle="true"
                app:iss_delay="3"
                android:visibility="gone"
                app:iss_error_image="@drawable/error"
                app:iss_period="1500"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_text_align="CENTER"
                app:iss_title_background="@drawable/gradient"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </com.denzcoskun.imageslider.ImageSlider>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="135dp"
            android:layout_marginEnd="136dp"
            android:background="@drawable/rounded_rect_darik"
            android:fontFamily="@font/blacklist"
            android:gravity="center|center_horizontal"
            android:text="@string/app_name"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/equal_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/rounded_rect_darik"
        android:elevation="8dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_movie"
            app:bt_shape="@drawable/movie_background_stroke"
            app:bt_title="@string/nav_movie" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_baseline_favorite"
            app:bt_shape="@drawable/fav_background_stroke"
            app:bt_title="@string/nav_favorite" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_tv_show"
            app:bt_shape="@drawable/tvshow_background_stroke"
            app:bt_title="@string/nav_tv_show" />

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>


</androidx.constraintlayout.widget.ConstraintLayout>